<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="index"
            type="int" />

        <variable
            name="setsCount"
            type="int" />

        <variable
            name="reps"
            type="Integer" />

        <variable
            name="actualSet"
            type="ru.codingworkshop.gymm.ui.actual.set.ActualSetDataBindingWrapper" />

        <variable
            name="programSet"
            type="ru.codingworkshop.gymm.data.entity.ProgramSet" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="ru.codingworkshop.gymm.ui.actual.set.ActualSetFragment"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/actualSetIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:text="@{@plurals/number_of_sets(index + 1, index + 1)}"
            app:layout_constraintEnd_toStartOf="@+id/actualSetOutOfTextView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="1 подход" />

        <TextView
            android:id="@+id/actualSetOutOfTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="8dp"
            android:text="@string/out_of"
            app:layout_constraintEnd_toStartOf="@+id/actualSetProgramSetsCount"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/actualSetProgramSetsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:text="@{Integer.toString(setsCount)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="5" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/actualSetRepsCountLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@+id/actualSetWeightLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actualSetIndex">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/actualSetRepsCountEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reps"
                android:inputType="number"
                android:text="@={actualSet.reps}"
                tools:text="10" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/actualSetWeightLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/actualSetRepsCountLayout"
            app:layout_constraintTop_toBottomOf="@+id/actualSetIndex">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/actualSetWeightEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:inputType="numberDecimal"
                android:text="@={actualSet.weight}" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/actualSetDoneButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@{actualSet.id == 0 ? @string/actual_training_activity_stepper_item_finish_set : @string/actual_training_activity_stepper_item_edit_set}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actualSetRepsCountLayout"
            tools:text="Завершить подход" />

    </android.support.constraint.ConstraintLayout>
</layout>