<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <import type="ru.codingworkshop.gymm.R.style" alias="style" />
        <variable
            name="index"
            type="int" />
        <variable
            name="title"
            type="String" />
        <variable
            name="summarise"
            type="String" />
        <variable
            name="active"
            type="boolean" />
        <variable
            name="done"
            type="boolean" />
        <variable
            name="first"
            type="boolean" />
        <variable
            name="last"
            type="boolean" />
    </data>

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:minHeight="70dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/stepperItemTopLine"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="36dp"
            android:layout_marginTop="0dp"
            android:background="@color/color_material_grey_400"
            android:visibility="@{first ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintBottom_toTopOf="@+id/stepperItemCircle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="36dp" />

        <ImageView
            android:id="@+id/stepperItemCircle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@{done ? @drawable/ic_check_circle_primary_24dp : active ? @drawable/ic_circle_primary_24dp : @drawable/ic_circle_grey_24dp}"
            app:layout_constraintLeft_toRightOf="@+id/stepperItemTopLine"
            app:layout_constraintRight_toLeftOf="@+id/stepperItemTopLine"
            app:layout_constraintTop_toTopOf="@+id/stepperItemTitle"
            tools:background="@drawable/ic_circle_grey_24dp" />

        <TextView
            android:id="@+id/stepperItemIndex"
            android:layout_width="9dp"
            android:layout_height="17dp"
            android:text="@{Integer.toString(index + 1)}"
            android:visibility="@{done ? View.GONE : View.VISIBLE}"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/stepperItemCircle"
            app:layout_constraintLeft_toLeftOf="@+id/stepperItemCircle"
            app:layout_constraintRight_toRightOf="@+id/stepperItemCircle"
            app:layout_constraintTop_toTopOf="@+id/stepperItemCircle"
            tools:text="0" />

        <ImageView
            android:id="@+id/stepperItemBottomLine"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="8dp"
            android:background="@color/color_material_grey_400"
            android:visibility="@{last ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stepperItemCircle" />

        <TextView
            android:id="@+id/stepperItemTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@{title}"
            android:textAppearance="@{active ? style.TextAppearance_AppCompat_Body2 : style.TextAppearance_AppCompat_Small}"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toEndOf="@+id/stepperItemCircle"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Inactive step is here" />

        <TextView
            android:id="@+id/stepperItemSubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:text="@{summarise}"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toStartOf="@+id/stepperItemTitle"
            app:layout_constraintTop_toBottomOf="@+id/stepperItemTitle"
            tools:text="Summary if needed"
            tools:visibility="visible" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <FrameLayout
            android:id="@+id/stepperItemActualSetsContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="@{active ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toEndOf="@+id/stepperItemIndex"
            app:layout_constraintTop_toBottomOf="@+id/stepperItemSubtitle">

        </FrameLayout>

    </android.support.constraint.ConstraintLayout>
</layout>