...
    <string name="exercises_picker_activity_title">Выберите упражнение</string>
    <string name="exercises_picker_activity_primary">Основные</string>
    <string name="exercises_picker_activity_secondary">С задействованием</string>

    <!-- actual training activity -->
    <string name="actual_training_activity_stepper_item_finish_set">Завершить подход</string>
    <string name="actual_training_activity_stepper_item_edit_set">Изменить подход</string>
    <string name="actual_training_activity_stepper_item_reps_error">введите количество повторений</string>
    <string name="actual_training_activity_stepper_item_weight_error">введите вес</string>
    <string name="actual_training_activity_are_you_sure_message">Завершить тренировку?</string>

    <!-- statistics activity -->
    <string name="statistics_activity_title">Статистика</string>

    <string name="statistics_activity_plot_tab">Графики</string>
    <string name="statistics_activity_data_spinner_label">Данные</string>
...
