<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_finish_training"
        android:icon="@drawable/ic_flag_white_24dp"
        android:title="Закончить тренировку"
        app:showAsAction="ifRoom" />
</menu>